mdoc: C# formatter is not outputting "protected internal" Corrected  VB and C# formatters Edited integration tests Closes #137

--- a/mdoc/Test/html.expected-with-array-extension/Mono.DocTest/Widget.html
+++ b/mdoc/Test/html.expected-with-array-extension/Mono.DocTest/Widget.html
@@ -1864,7 +1864,7 @@
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </div>
           <h2>Syntax</h2>
-          <div class="Signature">protected readonly <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Double">double</a> <b>monthlyAverage</b> </div>
+          <div class="Signature">protected internal readonly <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Double">double</a> <b>monthlyAverage</b> </div>
           <h2 class="Section">Remarks</h2>
           <div class="SectionBox" id="F:Mono.DocTest.Widget.monthlyAverage:Remarks">
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
@@ -2044,7 +2044,7 @@
           <p>
             <b>Value: </b>3.14159</p>
           <h2>Syntax</h2>
-          <div class="Signature">protected const <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Double">double</a> <b>PI</b> </div>
+          <div class="Signature">protected internal const <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Double">double</a> <b>PI</b> </div>
           <h2 class="Section">Remarks</h2>
           <div class="SectionBox" id="F:Mono.DocTest.Widget.PI:Remarks">
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
@@ -2096,7 +2096,7 @@
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </div>
           <h2>Syntax</h2>
-          <div class="Signature">protected <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int16">short</a> <b>X</b>  { set; }</div>
+          <div class="Signature">protected internal <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int16">short</a> <b>X</b>  { set; }</div>
           <h4 class="Subsection">Value</h4>
           <blockquote class="SubsectionBox" id="P:Mono.DocTest.Widget.X:Value">
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
@@ -2116,7 +2116,7 @@
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </div>
           <h2>Syntax</h2>
-          <div class="Signature">protected <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Double">double</a> <b>Y</b>  { get; set; }</div>
+          <div class="Signature">protected internal <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Double">double</a> <b>Y</b>  { get; set; }</div>
           <h4 class="Subsection">Value</h4>
           <blockquote class="SubsectionBox" id="P:Mono.DocTest.Widget.Y:Value">
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
