--- a/mdoc/Test/html.expected/Mono.DocTest/Widget.html
+++ b/mdoc/Test/html.expected/Mono.DocTest/Widget.html
@@ -1818,7 +1818,7 @@
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </div>
           <h2>Syntax</h2>
-          <div class="Signature">protected readonly <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Double">double</a> <b>monthlyAverage</b> </div>
+          <div class="Signature">protected internal readonly <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Double">double</a> <b>monthlyAverage</b> </div>
           <h2 class="Section">Remarks</h2>
           <div class="SectionBox" id="F:Mono.DocTest.Widget.monthlyAverage:Remarks">
             <tt>F:Mono.DocTest.Widget.monthlyAverage</tt>.</div>
@@ -1977,7 +1977,7 @@
           <p>
             <b>Value: </b>3.14159</p>
           <h2>Syntax</h2>
-          <div class="Signature">protected const <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Double">double</a> <b>PI</b> </div>
+          <div class="Signature">protected internal const <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Double">double</a> <b>PI</b> </div>
           <h2 class="Section">Remarks</h2>
           <div class="SectionBox" id="F:Mono.DocTest.Widget.PI:Remarks">
             <tt>F:Mono.DocTest.Widget.PI</tt>.</div>
@@ -2024,7 +2024,7 @@
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </div>
           <h2>Syntax</h2>
-          <div class="Signature">protected <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int16">short</a> <b>X</b>  { set; }</div>
+          <div class="Signature">protected internal <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int16">short</a> <b>X</b>  { set; }</div>
           <h4 class="Subsection">Value</h4>
           <blockquote class="SubsectionBox" id="P:Mono.DocTest.Widget.X:Value">A <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int16">short</a> value...</blockquote>
           <h2 class="Section">Remarks</h2>
@@ -2041,7 +2041,7 @@
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </div>
           <h2>Syntax</h2>
-          <div class="Signature">protected <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Double">double</a> <b>Y</b>  { get; set; }</div>
+          <div class="Signature">protected internal <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Double">double</a> <b>Y</b>  { get; set; }</div>
           <h4 class="Subsection">Value</h4>
           <blockquote class="SubsectionBox" id="P:Mono.DocTest.Widget.Y:Value">A <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Double">double</a> value...</blockquote>
           <h2 class="Section">Remarks</h2>
