--- a/mdoc/Test/html.expected-with-array-extension/Mono.DocTest.Generic/MyList`1.html
+++ b/mdoc/Test/html.expected-with-array-extension/Mono.DocTest.Generic/MyList`1.html
@@ -332,7 +332,7 @@
                 </td>
                 <td colspan="2">
                   <b>
-                    <a href="#M:Mono.DocTest.Generic.MyList`1.RefMethod``1(`0@,``0@)">RefMethod&lt;U&gt;</a>
+                    <a href="#M:Mono.DocTest.Generic.MyList`1.RefMethod``1(`0,``0)">RefMethod&lt;U&gt;</a>
                   </b>(<i>ref</i> <i title="To be added.">T</i>, <i>ref</i> <i title="To be added.">U</i>)<blockquote><span class="NotEntered">Documentation for this section has not yet been entered.</span></blockquote></td>
               </tr>
               <tr valign="top">
@@ -568,15 +568,15 @@
             <b>Namespace: </b>Mono.DocTest.Generic<br /><b>Assembly: </b>DocTest (in DocTest.dll)<br /><b>Assembly Versions: </b>0.0.0.0</div>
           <hr size="1" />
         </blockquote>
-        <h3 id="M:Mono.DocTest.Generic.MyList`1.RefMethod``1(`0@,``0@)">RefMethod&lt;U&gt; Generic Method</h3>
-        <blockquote id="M:Mono.DocTest.Generic.MyList`1.RefMethod``1(`0@,``0@):member">
+        <h3 id="M:Mono.DocTest.Generic.MyList`1.RefMethod``1(`0,``0)">RefMethod&lt;U&gt; Generic Method</h3>
+        <blockquote id="M:Mono.DocTest.Generic.MyList`1.RefMethod``1(`0,``0):member">
           <div class="msummary">
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </div>
           <h2>Syntax</h2>
           <div class="Signature">public <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Void">void</a> <b>RefMethod&lt;U&gt;</b> (<i>ref</i> <i title="To be added.">T</i> t, <i>ref</i> <i title="To be added.">U</i> u)</div>
           <h4 class="Subsection">Type Parameters</h4>
-          <blockquote class="SubsectionBox" id="M:Mono.DocTest.Generic.MyList`1.RefMethod``1(`0@,``0@):Type Parameters">
+          <blockquote class="SubsectionBox" id="M:Mono.DocTest.Generic.MyList`1.RefMethod``1(`0,``0):Type Parameters">
             <dl>
               <dt>
                 <i>U</i>
@@ -587,7 +587,7 @@
             </dl>
           </blockquote>
           <h4 class="Subsection">Parameters</h4>
-          <blockquote class="SubsectionBox" id="M:Mono.DocTest.Generic.MyList`1.RefMethod``1(`0@,``0@):Parameters">
+          <blockquote class="SubsectionBox" id="M:Mono.DocTest.Generic.MyList`1.RefMethod``1(`0,``0):Parameters">
             <dl>
               <dt>
                 <i>t</i>
@@ -604,11 +604,11 @@
             </dl>
           </blockquote>
           <h2 class="Section">Remarks</h2>
-          <div class="SectionBox" id="M:Mono.DocTest.Generic.MyList`1.RefMethod``1(`0@,``0@):Remarks">
+          <div class="SectionBox" id="M:Mono.DocTest.Generic.MyList`1.RefMethod``1(`0,``0):Remarks">
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </div>
           <h2 class="Section">Requirements</h2>
-          <div class="SectionBox" id="M:Mono.DocTest.Generic.MyList`1.RefMethod``1(`0@,``0@):Version Information">
+          <div class="SectionBox" id="M:Mono.DocTest.Generic.MyList`1.RefMethod``1(`0,``0):Version Information">
             <b>Namespace: </b>Mono.DocTest.Generic<br /><b>Assembly: </b>DocTest (in DocTest.dll)<br /><b>Assembly Versions: </b>0.0.0.0</div>
           <hr size="1" />
         </blockquote>
