--- a/mdoc/Test/html.expected/Mono.DocTest/Widget.html
+++ b/mdoc/Test/html.expected/Mono.DocTest/Widget.html
@@ -647,7 +647,7 @@
                 </td>
                 <td colspan="2">
                   <b>
-                    <a href="#M:Mono.DocTest.Widget.M1(System.Char,System.Single@,Mono.DocTest.DocValueType@)">M1</a>
+                    <a href="#M:Mono.DocTest.Widget.M1(System.Char,System.Single,Mono.DocTest.DocValueType)">M1</a>
                   </b>(<a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Char">char</a>, <i>out</i> <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Single">float</a>, <i>ref</i> <a href="../Mono.DocTest/DocValueType.html">DocValueType</a>)<blockquote><span class="NotEntered">Documentation for this section has not yet been entered.</span></blockquote></td>
               </tr>
               <tr valign="top">
@@ -1595,15 +1595,15 @@
             <b>Namespace: </b>Mono.DocTest<br /><b>Assembly: </b>DocTest (in DocTest.dll)<br /><b>Assembly Versions: </b>0.0.0.0</div>
           <hr size="1" />
         </blockquote>
-        <h3 id="M:Mono.DocTest.Widget.M1(System.Char,System.Single@,Mono.DocTest.DocValueType@)">M1 Method</h3>
-        <blockquote id="M:Mono.DocTest.Widget.M1(System.Char,System.Single@,Mono.DocTest.DocValueType@):member">
+        <h3 id="M:Mono.DocTest.Widget.M1(System.Char,System.Single,Mono.DocTest.DocValueType)">M1 Method</h3>
+        <blockquote id="M:Mono.DocTest.Widget.M1(System.Char,System.Single,Mono.DocTest.DocValueType):member">
           <div class="msummary">
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </div>
           <h2>Syntax</h2>
           <div class="Signature">[Mono.DocTest.Doc("normal DocAttribute", Field=true)]<br />[return:Mono.DocTest.Doc("return:DocAttribute", Property=typeof(Mono.DocTest.Widget))]<br />public <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Void">void</a> <b>M1</b> ([Mono.DocTest.Doc("c", FlagsEnum=System.ConsoleModifiers.Alt | System.ConsoleModifiers.Control)] <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Char">char</a> c, [Mono.DocTest.Doc("f", NonFlagsEnum=Mono.DocTest.Color.Red)] <i>out</i> <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Single">float</a> f, [Mono.DocTest.Doc("v")] <i>ref</i> <a href="../Mono.DocTest/DocValueType.html">DocValueType</a> v)</div>
           <h4 class="Subsection">Parameters</h4>
-          <blockquote class="SubsectionBox" id="M:Mono.DocTest.Widget.M1(System.Char,System.Single@,Mono.DocTest.DocValueType@):Parameters">
+          <blockquote class="SubsectionBox" id="M:Mono.DocTest.Widget.M1(System.Char,System.Single,Mono.DocTest.DocValueType):Parameters">
             <dl>
               <dt>
                 <i>c</i>
@@ -1620,10 +1620,10 @@
             </dl>
           </blockquote>
           <h2 class="Section">Remarks</h2>
-          <div class="SectionBox" id="M:Mono.DocTest.Widget.M1(System.Char,System.Single@,Mono.DocTest.DocValueType@):Remarks">
+          <div class="SectionBox" id="M:Mono.DocTest.Widget.M1(System.Char,System.Single,Mono.DocTest.DocValueType):Remarks">
             <tt>M:Mono.DocTest.Widget.M1(System.Char,System.Signle@,Mono.DocTest.DocValueType@)</tt>.</div>
           <h2 class="Section">Requirements</h2>
-          <div class="SectionBox" id="M:Mono.DocTest.Widget.M1(System.Char,System.Single@,Mono.DocTest.DocValueType@):Version Information">
+          <div class="SectionBox" id="M:Mono.DocTest.Widget.M1(System.Char,System.Single,Mono.DocTest.DocValueType):Version Information">
             <b>Namespace: </b>Mono.DocTest<br /><b>Assembly: </b>DocTest (in DocTest.dll)<br /><b>Assembly Versions: </b>0.0.0.0</div>
           <hr size="1" />
         </blockquote>
