--- a/mdoc/Test/html.expected/System/Array.html
+++ b/mdoc/Test/html.expected/System/Array.html
@@ -277,7 +277,7 @@
                 </td>
                 <td colspan="2">
                   <b>
-                    <a href="#M:System.Array.Resize``1(``0[]@,System.Int32)">Resize&lt;T&gt;</a>
+                    <a href="#M:System.Array.Resize``1(``0[],System.Int32)">Resize&lt;T&gt;</a>
                   </b>(<i>ref</i> <i title="To be added.">T</i>[], <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int32">int</a>)<blockquote><span class="NotEntered">Documentation for this section has not yet been entered.</span></blockquote></td>
               </tr>
             </table>
@@ -459,15 +459,15 @@
             <b>Namespace: </b>System<br /><b>Assembly: </b>DocTest (in DocTest.dll)<br /><b>Assembly Versions: </b>0.0.0.0</div>
           <hr size="1" />
         </blockquote>
-        <h3 id="M:System.Array.Resize``1(``0[]@,System.Int32)">Resize&lt;T&gt; Generic Method</h3>
-        <blockquote id="M:System.Array.Resize``1(``0[]@,System.Int32):member">
+        <h3 id="M:System.Array.Resize``1(``0[],System.Int32)">Resize&lt;T&gt; Generic Method</h3>
+        <blockquote id="M:System.Array.Resize``1(``0[],System.Int32):member">
           <div class="msummary">
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </div>
           <h2>Syntax</h2>
           <div class="Signature">public static <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Void">void</a> <b>Resize&lt;T&gt;</b> (<i>ref</i> <i title="To be added.">T</i>[] array, <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int32">int</a> newSize)</div>
           <h4 class="Subsection">Type Parameters</h4>
-          <blockquote class="SubsectionBox" id="M:System.Array.Resize``1(``0[]@,System.Int32):Type Parameters">
+          <blockquote class="SubsectionBox" id="M:System.Array.Resize``1(``0[],System.Int32):Type Parameters">
             <dl>
               <dt>
                 <i>T</i>
@@ -478,7 +478,7 @@
             </dl>
           </blockquote>
           <h4 class="Subsection">Parameters</h4>
-          <blockquote class="SubsectionBox" id="M:System.Array.Resize``1(``0[]@,System.Int32):Parameters">
+          <blockquote class="SubsectionBox" id="M:System.Array.Resize``1(``0[],System.Int32):Parameters">
             <dl>
               <dt>
                 <i>array</i>
@@ -495,7 +495,7 @@
             </dl>
           </blockquote>
           <h4 class="Subsection">Exceptions</h4>
-          <blockquote class="SubsectionBox" id="M:System.Array.Resize``1(``0[]@,System.Int32):Exceptions">
+          <blockquote class="SubsectionBox" id="M:System.Array.Resize``1(``0[],System.Int32):Exceptions">
             <table class="TypeDocumentation">
               <tr>
                 <th>Type</th>
@@ -512,11 +512,11 @@
             </table>
           </blockquote>
           <h2 class="Section">Remarks</h2>
-          <div class="SectionBox" id="M:System.Array.Resize``1(``0[]@,System.Int32):Remarks">
+          <div class="SectionBox" id="M:System.Array.Resize``1(``0[],System.Int32):Remarks">
             <span class="NotEntered">Documentation for this section has not yet been entered.</span>
           </div>
           <h2 class="Section">Requirements</h2>
-          <div class="SectionBox" id="M:System.Array.Resize``1(``0[]@,System.Int32):Version Information">
+          <div class="SectionBox" id="M:System.Array.Resize``1(``0[],System.Int32):Version Information">
             <b>Namespace: </b>System<br /><b>Assembly: </b>DocTest (in DocTest.dll)<br /><b>Assembly Versions: </b>0.0.0.0</div>
           <hr size="1" />
         </blockquote>
