--- a/mdoc/Test/html.expected/Mono.DocTest.Generic/MyList`2.html
+++ b/mdoc/Test/html.expected/Mono.DocTest.Generic/MyList`2.html
@@ -325,7 +325,7 @@
                 <td colspan="2">
                   <b>
                     <a href="../Mono.DocTest.Generic/GenericBase`1.html#M:Mono.DocTest.Generic.GenericBase`1.BaseMethod``1(``0)">BaseMethod&lt;S&gt;</a>
-                  </b>(<i title="Insert more text here.">S</i>)<nobr> : <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Collections.Generic.Dictionary`2">Dictionary&lt;A, B&gt;</a></nobr><blockquote><span class="NotEntered">Documentation for this section has not yet been entered.</span> (<i>Inherited from <a href="../Mono.DocTest.Generic/GenericBase`1.html">GenericBase&lt;U&gt;</a>.</i>)</blockquote></td>
+                  </b>(<i title="Insert more text here.">S</i>)<nobr> : <i title="">System.Collections.Generic.Dictionary&lt;A,B&gt;</i></nobr><blockquote><span class="NotEntered">Documentation for this section has not yet been entered.</span> (<i>Inherited from <a href="../Mono.DocTest.Generic/GenericBase`1.html">GenericBase&lt;U&gt;</a>.</i>)</blockquote></td>
               </tr>
               <tr valign="top">
                 <td>
