display "TypeParameter" node for delegate only if generic parameters are declared by itself

--- a/mdoc/Test/html.expected-with-array-extension/index.html
+++ b/mdoc/Test/html.expected-with-array-extension/index.html
@@ -432,6 +432,14 @@
         </tr>
         <tr valign="top">
           <td>
+            <a href="Mono.DocTest.Generic/MyList`1+RefDelegate.html">MyList&lt;T&gt;.RefDelegate</a>
+          </td>
+          <td>
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </td>
+        </tr>
+        <tr valign="top">
+          <td>
             <a href="Mono.DocTest.Generic/MyList`2.html">MyList&lt;A,B&gt;</a>
           </td>
           <td>
