--- a/mdoc/Test/html.expected/Mono.DocTest.Generic/MyList`1+RefDelegate.html
+++ b/mdoc/Test/html.expected/Mono.DocTest.Generic/MyList`1+RefDelegate.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>DocTest: Mono.DocTest.Generic</title>
+    <title>Mono.DocTest.Generic.MyList&lt;T&gt;.RefDelegate</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <style>
       a { text-decoration: none }
@@ -187,114 +187,48 @@
   </head>
   <body>
     <div class="CollectionTitle">
-      <a href="../index.html">DocTest</a>
+      <a href="../index.html">DocTest</a> : <a href="index.html">Mono.DocTest.Generic Namespace</a></div>
+    <div class="SideBar">
+      <p>
+        <a href="#T:Mono.DocTest.Generic.MyList`1.RefDelegate">Overview</a>
+      </p>
+      <p>
+        <a href="#T:Mono.DocTest.Generic.MyList`1.RefDelegate:Signature">Signature</a>
+      </p>
+      <p>
+        <a href="#T:Mono.DocTest.Generic.MyList`1.RefDelegate:Docs">Remarks</a>
+      </p>
+      <p>
+        <a href="#Members">Members</a>
+      </p>
+      <p>
+        <a href="#T:Mono.DocTest.Generic.MyList`1.RefDelegate:Members">Member Details</a>
+      </p>
     </div>
-    <h1 class="PageTitle">Mono.DocTest.Generic Namespace</h1>
-    <p class="Summary">
+    <h1 class="PageTitle" id="T:Mono.DocTest.Generic.MyList`1.RefDelegate">MyList&lt;T&gt;.RefDelegate  Delegate</h1>
+    <p class="Summary" id="T:Mono.DocTest.Generic.MyList`1.RefDelegate:Summary">
+      <span class="NotEntered">Documentation for this section has not yet been entered.</span>
     </p>
     <div>
+      <h2>Syntax</h2>
+      <div class="Signature" id="T:Mono.DocTest.Generic.MyList`1.RefDelegate:Signature">public delegate <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Boolean">bool</a> <b>MyList&lt;T&gt;.RefDelegate</b> ()</div>
     </div>
-    <div class="Remarks">
-      <h2 class="Section"> Namespace</h2>
-      <p>
+    <div class="Remarks" id="T:Mono.DocTest.Generic.MyList`1.RefDelegate:Docs">
+      <h4 class="Subsection">Returns</h4>
+      <blockquote class="SubsectionBox" id="T:Mono.DocTest.Generic.MyList`1.RefDelegate:Docs:Returns">
         <span class="NotEntered">Documentation for this section has not yet been entered.</span>
-      </p>
-      <table class="TypesListing" style="margin-top: 1em">
-        <tr>
-          <th>Type</th>
-          <th>Description</th>
-        </tr>
-        <tr valign="top">
-          <td>
-            <a href="./Extensions.html">Extensions</a>
-          </td>
-          <td>extension methods!</td>
-        </tr>
-        <tr valign="top">
-          <td>
-            <a href="./Func`2.html">Func&lt;TArg,TRet&gt;</a>
-          </td>
-          <td>
-            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
-          </td>
-        </tr>
-        <tr valign="top">
-          <td>
-            <a href="./GenericBase`1.html">GenericBase&lt;U&gt;</a>
-          </td>
-          <td>
-            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
-          </td>
-        </tr>
-        <tr valign="top">
-          <td>
-            <a href="./GenericBase`1+FooEventArgs.html">GenericBase&lt;U&gt;.FooEventArgs</a>
-          </td>
-          <td>
-            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
-          </td>
-        </tr>
-        <tr valign="top">
-          <td>
-            <a href="./GenericBase`1+NestedCollection.html">GenericBase&lt;U&gt;.NestedCollection</a>
-          </td>
-          <td>
-            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
-          </td>
-        </tr>
-        <tr valign="top">
-          <td>
-            <a href="./GenericBase`1+NestedCollection+Enumerator.html">GenericBase&lt;U&gt;.NestedCollection.Enumerator</a>
-          </td>
-          <td>
-            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
-          </td>
-        </tr>
-        <tr valign="top">
-          <td>
-            <a href="./IFoo`1.html">IFoo&lt;T&gt;</a>
-          </td>
-          <td>
-            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
-          </td>
-        </tr>
-        <tr valign="top">
-          <td>
-            <a href="./MyList`1.html">MyList&lt;T&gt;</a>
-          </td>
-          <td>
-            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
-          </td>
-        </tr>
-        <tr valign="top">
-          <td>
-            <a href="./MyList`1+Helper`2.html">MyList&lt;T&gt;.Helper&lt;U,V&gt;</a>
-          </td>
-          <td>
-            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
-          </td>
-        </tr>
-        <tr valign="top">
-          <td>
-            <a href="./MyList`1+RefDelegate.html">MyList&lt;T&gt;.RefDelegate</a>
-          </td>
-          <td>
-            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
-          </td>
-        </tr>
-        <tr valign="top">
-          <td>
-            <a href="./MyList`2.html">MyList&lt;A,B&gt;</a>
-          </td>
-          <td>
-            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
-          </td>
-        </tr>
-      </table>
+      </blockquote>
+      <h2 class="Section">Remarks</h2>
+      <div class="SectionBox" id="T:Mono.DocTest.Generic.MyList`1.RefDelegate:Docs:Remarks">
+        <tt>T:Mono.DocTest.MyList`1.RefDelegate</tt>.</div>
+      <h2 class="Section">Requirements</h2>
+      <div class="SectionBox" id="T:Mono.DocTest.Generic.MyList`1.RefDelegate:Docs:Version Information">
+        <b>Namespace: </b>Mono.DocTest.Generic<br /><b>Assembly: </b>DocTest (in DocTest.dll)<br /><b>Assembly Versions: </b>0.0.0.0</div>
     </div>
-    <div class="Members">
+    <div class="Members" id="T:Mono.DocTest.Generic.MyList`1.RefDelegate:Members">
     </div>
     <hr size="1" />
-    <div class="Copyright">To be added.</div>
+    <div class="Copyright">
+    </div>
   </body>
 </html>
