--- a/mdoc/Test/html.expected-with-array-extension/Mono.DocTest.Generic/index.html
+++ b/mdoc/Test/html.expected-with-array-extension/Mono.DocTest.Generic/index.html
@@ -278,6 +278,14 @@
         </tr>
         <tr valign="top">
           <td>
+            <a href="./MyList`1+RefDelegate.html">MyList&lt;T&gt;.RefDelegate</a>
+          </td>
+          <td>
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </td>
+        </tr>
+        <tr valign="top">
+          <td>
             <a href="./MyList`2.html">MyList&lt;A,B&gt;</a>
           </td>
           <td>
